--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "@enso-ui/dropdown-indicator": "^1.0.0",
     "@enso-ui/loader": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
