--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "@enso-ui/dropdown-indicator": "^1.0.0",
-    "@enso-ui/loader": "^1.0.0",
+    "@enso-ui/dropdown-indicator": "1.0.x",
+    "@enso-ui/loader": "1.0.x",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "bulma": "^0.7.2",
