--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@enso-ui/loader": "^3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.2",
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
+    "@fortawesome/vue-fontawesome": "3.0.0-5",
     "bulma": "^0.9.0",
     "vue": "^3.0"
   },
