--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/enso-ui/card.git"
+    "url": "git+https://github.com/liberu-ui/card.git"
   },
   "keywords": [
     "card",
@@ -18,9 +18,9 @@
   "author": "Adrian Ocneanu <aocneanu@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/enso-ui/card/issues"
+    "url": "https://github.com/liberu-ui/card/issues"
   },
-  "homepage": "https://github.com/enso-ui/card#readme",
+  "homepage": "https://github.com/liberu-ui/card#readme",
   "dependencies": {
     "@liberu-ui/dropdown-indicator": "^2.0",
     "@liberu-ui/loader": "^3.0",
