--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@liberu-ui/card",
   "version": "3.0.15",
   "description": "Card component",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
